Syed | Code of Retail Product Details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.servlet.context-path=/retail
+server.servlet.context-path=/retail-products
 
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/products
+spring.datasource.url=jdbc:mysql://localhost:3306/retail-products
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
